# emerald-exchange

./: .bumpversion.cfg  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  connector_manifest.yml  index.html  main_agent.json  mcp_config.json  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
config_schema/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  compose.yml  mcp.compose.yml
docs/: concepts.md  config_schema.md  configuration.md  deployment.md  index.md  installation.md  overview.md  usage.md
emerald_exchange/: __init__.py  __main__.py  _engine.py  agent_server.py  backends.py  backtester.py  cockpit.py  derivatives.py  execution_bridge.py  fees.py  forensic.py  hedging.py  kg_ingest.py  main_agent.json  market_making.py  mcp_server.py  risk_guards.py  stat_arb.py  ws_client.py
emerald_exchange/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
emerald_exchange/data/: __init__.py  edgar.py  execution_policy.json  wallet_intel.py
emerald_exchange/mcp/: __init__.py  mcp_crypto.py  mcp_debate.py  mcp_derivatives.py  mcp_fundamentals.py  mcp_kg_ingest.py  mcp_market_data.py  mcp_market_making.py  mcp_orders.py  mcp_portfolio.py  mcp_prediction_markets.py  mcp_risk.py  mcp_signals.py  mcp_statarb.py  mcp_strategy.py  mcp_wallet_intel.py
emerald_exchange/ontology/: __init__.py  banking.ttl  certification.json  emerald.ttl  quant.ttl  trading.ttl
emerald_exchange/ontology/fixtures/: records.json
emerald_exchange/ontology/mappings/: source.yaml
emerald_exchange/ontology/migrations/: manifest.json
emerald_exchange/ontology/shapes/: connector.shacl.ttl
emerald_exchange/prompts/: trading_specialist.json
emerald_exchange/skills/emerald-exchange-kg-ingestion/: SKILL.md  WORKFLOW.md
emerald_exchange/skills/emerald-exchange-market-data/: SKILL.md  WORKFLOW.md
emerald_exchange/skills/emerald-exchange-operations/: SKILL.md
emerald_exchange/skills/emerald-exchange-operations/agents/: openai.yaml
emerald_exchange/skills/emerald-exchange-operations/references/: catalog.md
emerald_exchange/skills/emerald-exchange-order-execution/: SKILL.md  WORKFLOW.md
emerald_exchange/skills/emerald-starter/: SKILL.md
installation/: index.html
overview/: index.html
search/: search_index.json
tests/: conftest.py  test_concept_parity.py  test_execution_cockpit_derivatives.py  test_fundamentals.py  test_hft_suite.py  test_init_dynamics.py  test_insider_equilibrium_action.py  test_kg_ingest.py  test_kyle_surveillance.py  test_startup.py  test_statarb_hedging.py  test_wallet_intel.py
usage/: index.html
