[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emerald-exchange"
version = "2.0.0"
description = "Emerald Exchange — Unified Finance MCP Server with fully abstracted exchange backends for equities, crypto, and derivatives trading. CONCEPT:EE-001"
readme = "README.md"
authors = [{ name = "Project Maintainers", email = "maintainers@users.noreply.github.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.12,<3.15"
dependencies = [
    "agent-utilities[mcp]>=2.0.0,<3.0.0",
    "numpy>=2.5.1",
    # CONCEPT:PHASE2-RECONCILE — relaxed off the pandas 3.x floor to match
    # agent-utilities[finance]'s ecosystem-compatible range (the two must
    # resolve to the same pandas major across the workspace lock).
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
mcp = ["agent-utilities[mcp]>=2.0.0,<3.0.0"]
alpaca = ["alpaca-py>=0.43.5"]
binance = ["python-binance>=1.0.37"]
crypto = ["ccxt>=4.5.67"]
prediction_markets = ["httpx>=0.28.1", "kalshi-python>=2.1.4", "py-clob-client>=0.34.6", "websockets>=16.1.1"]
fundamentals = ["edgartools>=5.43.0"]
wallet_intel = ["polars>=1.43.0", "py-clob-client>=0.34.6"]
all = [
    "agent-utilities[mcp,agent-runtime,logfire]>=2.0.0,<3.0.0",
    "alpaca-py>=0.43.5",
    "ccxt>=4.5.67",
    "httpx>=0.28.1",
    "kalshi-python>=2.1.4",
    "py-clob-client>=0.34.6",
    "websockets>=16.1.1",
    "edgartools>=5.43.0",
    "polars>=1.43.0",
]
agent = ["agent-utilities[agent-runtime,logfire]>=2.0.0,<3.0.0"]

[project.scripts]
emerald-exchange-mcp = "emerald_exchange.mcp_server:mcp_server"
emerald-exchange-agent = "emerald_exchange.agent_server:agent_server"
emerald-cockpit = "emerald_exchange.cockpit:main"

[project.entry-points."agent_utilities.skill_providers"]
emerald-exchange = "emerald_exchange.skills"

[project.entry-points."agent_utilities.prompt_providers"]
emerald-exchange = "emerald_exchange.prompts"

# CONCEPT:AU-KG.ingest.mcp-tool-connector — Tier-1 declarative source preset(s) that sync
# this package's records into the KG via its own MCP server, resolved via iter_provider_dirs.
[project.entry-points."agent_utilities.source_connector_providers"]
emerald-exchange = "emerald_exchange.connectors"

# CONCEPT:AU-KG.ontology.package-federation-migration — federate this package's OWL/RDF ontology modules into the
# agent-utilities hub (quant, trading, banking). Resolved via iter_provider_dirs
# like the skill/prompt providers; the hub globs every *.ttl in the dir.
[project.entry-points."agent_utilities.ontology_providers"]
emerald-exchange = "emerald_exchange.ontology"

[tool.setuptools.package-data]
emerald_exchange = [ "mcp_config.json", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.setuptools.packages.find]
where = ["."]
